--- a/app/src/main/res/layout/fragment_my_exercises.xml
+++ b/app/src/main/res/layout/fragment_my_exercises.xml
@@ -17,6 +17,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/tv_no_exercises"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_no_exercises"
+        app:layout_constraintBottom_toTopOf="@id/bt_new_exercise"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_my_exercises"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/exercise_recycler"
