Made new data class for UI/logic to seperate from db and network. Added conversions

--- a/app/src/main/res/layout/fragment_program_details.xml
+++ b/app/src/main/res/layout/fragment_program_details.xml
@@ -14,7 +14,7 @@
             type="com.example.exercisetracker.db.Program" />
         <variable
             name="programType"
-            type="com.example.exercisetracker.db.AppProgramType" />
+            type="com.example.exercisetracker.db.AppProgramTypeEntity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
