--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -46,9 +46,6 @@
         <action
             android:id="@+id/action_programTypeFragment_to_newProgramFragment"
             app:destination="@id/newProgramFragment">
-        <argument
-            android:name="programTypeId"
-            app:argType="integer" />
         </action>
         <action
             android:id="@+id/action_programTypeFragment_to_SecondFragment"
@@ -65,6 +62,9 @@
         <argument
             android:name="programTypeId"
             app:argType="integer"/>
+        <argument
+            android:name="activityLocation"
+            app:argType="string"/>
         <action
             android:id="@+id/action_newProgramFragment_to_programTypeFragment"
             app:destination="@id/programTypeFragment"
@@ -74,8 +74,8 @@
             android:id="@+id/action_newProgramFragment_to_programDetailsFragment"
             app:destination="@id/programDetailsFragment" />
         <action
-            android:id="@+id/action_newProgramFragment_to_myExercisesFragment"
-            app:destination="@id/myExercisesFragment" />
+            android:id="@+id/action_newProgramFragment_to_myProgramsFragment"
+            app:destination="@id/myProgramsFragment" />
     </fragment>
 
 
@@ -90,7 +90,11 @@
             android:id="@+id/action_programDetailsFragment_to_newProgramFragment"
             app:destination="@id/newProgramFragment"
             app:popUpTo="@id/newProgramFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true">
+            <argument
+                android:name="userProgramId"
+                app:argType="integer" />
+        </action>
         <action
             android:id="@+id/action_programDetailsFragment_to_newExerciseFragment"
             app:destination="@id/newExerciseFragment" />
