Added "lag nytt program" button in myProgramsFragment that navigates to second fragment when user wants to create a new program

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -168,12 +168,12 @@
                 app:argType="integer" />
         </action>
         <action
-            android:id="@+id/action_myProgramsFragment_to_programSessionsFragment"
-            app:destination="@id/programSessionFragment" >
-            <argument
-                android:name="programId"
-                app:argType="integer" />
-        </action>
+            android:id="@+id/action_myProgramsFragment_to_programDetailsFragment"
+            app:destination="@id/programDetailsFragment"/>
+        <action
+            android:id="@+id/action_myProgramsFragment_to_SecondFragment"
+            app:destination="@id/SecondFragment" />
+
     </fragment>
 
     <fragment
