--- a/app/src/main/res/layout/fragment_my_programs.xml
+++ b/app/src/main/res/layout/fragment_my_programs.xml
@@ -21,17 +21,17 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/tv_my_programs"
-        app:layout_constraintBottom_toTopOf="@+id/button_back"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/program_item" />
 
     <Button
-        android:id="@+id/button_back"
+        android:id="@+id/button_new_program"
         android:layout_width="@dimen/button_size_medium"
         android:layout_height="wrap_content"
-        android:text="@string/button_back"
+        android:text="@string/create_new_program"
         android:layout_marginBottom="@dimen/side_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
