--- a/app/src/main/res/layout/program_item.xml
+++ b/app/src/main/res/layout/program_item.xml
@@ -29,7 +29,7 @@
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/program_icon"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/start_program_button" />
 
         <TextView
             android:id="@+id/program_description"
@@ -39,16 +39,27 @@
             android:text="Program Description"
             app:layout_constraintStart_toEndOf="@+id/program_icon"
             app:layout_constraintTop_toBottomOf="@+id/program_name"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toStartOf="@+id/start_program_button" />
 
         <TextView
             android:id="@+id/program_timing"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Timing: Yes"
             app:layout_constraintStart_toEndOf="@+id/program_icon"
-            app:layout_constraintTop_toBottomOf="@+id/program_description" />
+            app:layout_constraintTop_toBottomOf="@+id/program_description"
+            app:layout_constraintEnd_toStartOf="@+id/start_program_button"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageButton
+            android:id="@+id/start_program_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/start_img"
+            app:layout_constraintEnd_toStartOf="@+id/edit_program_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
         <ImageButton
             android:id="@+id/edit_program_button"
@@ -57,7 +68,7 @@
             android:src="@drawable/edit_img"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
