--- a/app/src/main/res/layout/program_type_item.xml
+++ b/app/src/main/res/layout/program_type_item.xml
@@ -12,27 +12,27 @@
             type="com.example.exercisetracker.db.AppProgramType"/>
     </data>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/program_type_item"
+    <LinearLayout
+        android:id="@+id/frame_border"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:cardMaxElevation="10dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true">
+        android:background="@drawable/recycler_border"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/margin_between_elements"
+        app:layout_constraintStart_toStartOf="parent">
+
 
         <ImageView
             android:id="@+id/program_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitXY"
             android:layout_marginStart="@dimen/side_margin"
             android:layout_marginTop="@dimen/side_margin"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:src="@drawable/manual_img"/>
+            tools:src="@drawable/runner_img" />
 
         <TextView
             android:id="@+id/program_type_name"
@@ -40,9 +40,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/side_margin"
             android:text="@{program.description}"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="(Henter fra db) Styrketrening med manualer"/>
+            app:layout_constraintStart_toEndOf="@id/program_icon"
+            app:layout_constraintTop_toBottomOf="@id/program_icon"
+            tools:text="(Henter fra db) Styrketrening med manualer" />
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </layout>
