--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
+    <color name="recycler_border">#FF999999</color>
 
     <!--Forslag.. kan endres. Abi: Lag tema!-->
     <color name="bg_exercise">#FFE0ECDE</color>
